crates/rome_formatter/tests/specs/prettier/cursor/range-8.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: range-8.js

---
# Input
```js
thisWontBeFormatted  ( 1  ,3)
<<<PRETTIER_RANGE_START>>>
    thisWillBeFormatted    (2  ,3,   )<|>

 <<<PRETTIER_RANGE_END>>>   thisWontBeFormatted  (2, 90  ,)

```

# Output
```js
thisWontBeFormatted  ( 1  ,3)
<<<PRETTIER_RANGE_START>>>
    thisWillBeFormatted    (2  ,3,   )<|>

 <<<PRETTIER_RANGE_END>>>   thisWontBeFormatted  (2, 90  ,)

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ range-8.js:2:3
  │
2 │ <<<PRETTIER_RANGE_START>>>
  │   ^^^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
  ┌─ range-8.js:3:40
  │
3 │     thisWillBeFormatted    (2  ,3,   )<|>
  │                                       -^ But this operator was encountered instead
  │                                       │ 
  │                                       This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
  ┌─ range-8.js:3:41
  │
3 │     thisWillBeFormatted    (2  ,3,   )<|>
  │                                        -^ But this operator was encountered instead
  │                                        │ 
  │                                        This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `>`, but found an operator instead
  ┌─ range-8.js:5:2
  │
3 │     thisWillBeFormatted    (2  ,3,   )<|>
  │                                         - This operator requires a right hand side value
4 │ 
5 │  <<<PRETTIER_RANGE_END>>>   thisWontBeFormatted  (2, 90  ,)
  │  ^^ But this operator was encountered instead

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ range-8.js:5:4
  │
5 │  <<<PRETTIER_RANGE_END>>>   thisWontBeFormatted  (2, 90  ,)
  │    ^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax


```


